--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./theme-simple.css" />
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
 		<link rel="stylesheet" href="//unpkg.com/docsify-accordion/src/style.css">
 
 
@@ -200,12 +200,10 @@
 			}
 		</script>
 		
-		<script src="./docsify.min.js"></script>
-		<script src="./docsify-tabs1.js"></script>
-		<script src="./docsify-pagination.min.js"></script>
-		<script src="./search.min.js"></script>
-		<script src="./docsify-themeable0.js"></script>
-		<script src="./docsify-plugin-flexible-alerts.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+		<script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
 		<script src="//unpkg.com/docsify-accordion/src/index.js"></script>
 		<script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
 
