--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+		<!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css"> -->
+		<link rel="stylesheet" href="https://unpkg.com/docsify-themeable/dist/css/theme-simple.css">
 		<link rel="stylesheet" href="//unpkg.com/docsify-accordion/src/style.css">
 
 
@@ -201,6 +202,7 @@
 		</script>
 		
 		<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.js"></script>
+		<script src="https://unpkg.com/docsify-themeable"></script>
 		<script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
 		<script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 		<script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
