--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				// logo: '../modules/painel/images/marca-painel-login.png',
 
 				executeScript: true,
-				loadSidebar: true,
+				loadSidebar: 'sidebar.md',
 				loadNavbar: false,
 				subMaxLevel: 3,
 				maxLevel: 3,
